[package]
name = "cc1310f128"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/eduxstad/cc1310f128-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]
